Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -3151,7 +3151,11 @@
 
         <div class="experience-container">
           <div class="experience-image-wrapper">
-            <img src="living room.png" alt="Living Room" id="experienceImage" />
+            <img
+              src="images/LivingImage.png"
+              alt="Living Room"
+              id="experienceImage"
+            />
             <div class="markers-container" id="markersContainer">
               <!-- Markers injected by JS -->
             </div>
@@ -3343,11 +3347,11 @@
       // Experience Section Data
       const experienceData = {
         living: {
-          image: "living room.png",
+          image: "images/LivingImage.png",
           markers: [
             {
               x: 10,
-              y: 55,
+              y: 57,
               product: {
                 name: "Bedside lamp",
                 image:
@@ -3355,8 +3359,8 @@
               },
             },
             {
-              x: 60,
-              y: 20,
+              x: 58,
+              y: 5,
               product: {
                 name: "Designer ceiling Lamp",
                 image:
@@ -3366,7 +3370,7 @@
           ],
         },
         office: {
-          image: "office.png",
+          image: "images/OfficeImage.png",
           markers: [
             {
               x: 65,
@@ -3380,7 +3384,7 @@
           ],
         },
         kitchen: {
-          image: "kitchen.png",
+          image: "images/KitchenImage.png",
           markers: [
             {
               x: 45,
