Update marker coordinates and product details in image maps

--- a/index.html
+++ b/index.html
@@ -3373,8 +3373,17 @@
           image: "images/OfficeImage.png",
           markers: [
             {
-              x: 65,
-              y: 30,
+              x: 58,
+              y: 5,
+              product: {
+                name: "Ergonomic Office Chair",
+                image:
+                  "https://cdn4.volusion.store/sjrzx-uggtc/v/vspfiles/photos/P10262-1.jpg",
+              },
+            },
+            {
+              x: 72,
+              y: 47,
               product: {
                 name: "Ergonomic Office Chair",
                 image:
@@ -3387,7 +3396,7 @@
           image: "images/KitchenImage.png",
           markers: [
             {
-              x: 45,
+              x: 43,
               y: 32,
               product: {
                 name: "Under Cabinet Lighting",
@@ -3396,8 +3405,8 @@
               },
             },
             {
-              x: 73,
-              y: 52,
+              x: 70,
+              y: 12,
               product: {
                 name: "Pendant Kitchen Light",
                 image:
