Add Deals of the Week and Top Categories section

--- a/index2.html
+++ b/index2.html
@@ -3151,7 +3151,11 @@
 
         <div class="experience-container">
           <div class="experience-image-wrapper">
-            <img src="living room.png" alt="Living Room" id="experienceImage" />
+            <img
+              src="images/LivingImage.png"
+              alt="Living Room"
+              id="experienceImage"
+            />
             <div class="markers-container" id="markersContainer">
               <!-- Markers injected by JS -->
             </div>
@@ -3343,11 +3347,11 @@
       // Experience Section Data
       const experienceData = {
         living: {
-          image: "living room.png",
+          image: "images/LivingImage.png",
           markers: [
             {
               x: 10,
-              y: 55,
+              y: 57,
               product: {
                 name: "Bedside lamp",
                 image:
@@ -3355,8 +3359,8 @@
               },
             },
             {
-              x: 60,
-              y: 20,
+              x: 58,
+              y: 5,
               product: {
                 name: "Designer ceiling Lamp",
                 image:
@@ -3366,11 +3370,20 @@
           ],
         },
         office: {
-          image: "office.png",
+          image: "images/OfficeImage.png",
           markers: [
             {
-              x: 65,
-              y: 30,
+              x: 58,
+              y: 5,
+              product: {
+                name: "Ergonomic Office Chair",
+                image:
+                  "https://cdn4.volusion.store/sjrzx-uggtc/v/vspfiles/photos/P10262-1.jpg",
+              },
+            },
+            {
+              x: 72,
+              y: 47,
               product: {
                 name: "Ergonomic Office Chair",
                 image:
@@ -3380,10 +3393,10 @@
           ],
         },
         kitchen: {
-          image: "kitchen.png",
+          image: "images/KitchenImage.png",
           markers: [
             {
-              x: 45,
+              x: 43,
               y: 32,
               product: {
                 name: "Under Cabinet Lighting",
@@ -3392,8 +3405,8 @@
               },
             },
             {
-              x: 73,
-              y: 52,
+              x: 70,
+              y: 12,
               product: {
                 name: "Pendant Kitchen Light",
                 image:
