--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
             >
               <div class="deal-card__image-wrapper">
                 <img
-                  src="//cdn4.volusion.store/sjrzx-uggtc/v/vspfiles/photos/12336-1.jpg?v-cache=1764953984"
+                  src="images/p-5.png"
                   alt="Architectural LED Linear Fixture"
                   loading="lazy"
                 />
@@ -834,7 +834,7 @@
             >
               <div class="deal-card__image-wrapper">
                 <img
-                  src="//cdn4.volusion.store/sjrzx-uggtc/v/vspfiles/photos/EWP90L40-1.jpg?v-cache=1764953984"
+                  src="images/p-6.png"
                   alt="Architectural LED Linear Fixture"
                   loading="lazy"
                 />
