Refined overall UI and implemented minor UI tweeks

--- a/index.html
+++ b/index.html
@@ -738,7 +738,17 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$108.54</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$108.54
+              </span>
+              $99.99
+            </p>
             <a href="#" class="deal-card__name">
               HALCO 99616 - CDL6FR15/940/RTJB/LED - 6" LED COMMERCIAL RETROFIT
               DOWNLIGHT
@@ -759,7 +769,16 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$90.88</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$90.88 </span
+              >$80.88
+            </p>
             <a href="#" class="deal-card__name">
               NaturaLED P10085 - RTS-6RL-WH - 5/6" Trim - Square - White
             </a>
@@ -779,7 +798,16 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$196.02</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$250.99 </span
+              >$196.02
+            </p>
             <a href="#" class="deal-card__name">
               USALight US-LM203W-40 - 2" Recessed LED Downlight - 9 Watt - 4000K
               - Baffle
@@ -800,7 +828,16 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$88.95</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$100.54 </span
+              >$88.95
+            </p>
             <a href="#" class="deal-card__name">
               ELCO ELK0727-FC - Koto Focus LED Module - 10W - 120V - 2700K -
               Adjustable Beam Angle - Black
@@ -820,7 +857,16 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$65.95</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$90.54 </span
+              >$65.95
+            </p>
             <a href="#" class="deal-card__name">
               EiKO 12336 - FL3/100W/7FCCT/UD/Y/PC - LED Floodlight - 100W -
               Selectable CCT - 120-277V
@@ -840,7 +886,16 @@
                 />
               </div>
             </a>
-            <p class="deal-card__price">$74.95</p>
+            <p class="deal-card__price">
+              <span
+                style="
+                  text-decoration: line-through;
+                  font-size: 17px;
+                  margin-right: 5px;
+                "
+                >$80.99 </span
+              >$74.95
+            </p>
             <a href="#" class="deal-card__name">
               ELCO EWP90L40 - LED Large Wall Packs - 90W - 4000K - Non-Dimmable
               - Bronze
@@ -1023,43 +1078,42 @@
           </a>
         </div>
       </section>
-
-      <!-- Enhanced Newsletter Section -->
-      <section class="tt-newsletter-section">
-        <div class="tt-newsletter-container">
-          <h2>Newsletter Sign Up</h2>
-          <p class="tt-newsletter-subtitle">
-            Stay updated with our latest products, exclusive offers, and
-            lighting tips delivered straight to your inbox.
-          </p>
-
-          <form
-            class="tt-newsletter-form"
-            id="tt-newsletterForm"
-            action="#"
-            method="post"
-          >
-            <div class="tt-input-wrapper">
-              <input
-                type="email"
-                name="email"
-                placeholder="Enter your email address"
-                required
-                id="tt-emailInput"
-              />
-              <i class="fas fa-envelope tt-input-icon"></i>
-            </div>
-            <button
-              type="submit"
-              id="tt-submitBtn"
-              class="tt-newsletter-btn tt-newsletter-btn"
-            >
-              <span class="tt-btn-text">Subscribe</span>
-            </button>
-          </form>
-        </div>
-      </section>
     </div>
+    <!-- Enhanced Newsletter Section -->
+    <section class="tt-newsletter-section">
+      <div class="tt-newsletter-container">
+        <h2>Newsletter Sign Up</h2>
+        <!-- <p class="tt-newsletter-subtitle">
+          Stay updated with our latest products, exclusive offers, and lighting
+          tips delivered straight to your inbox.
+        </p> -->
+
+        <form
+          class="tt-newsletter-form"
+          id="tt-newsletterForm"
+          action="#"
+          method="post"
+        >
+          <div class="tt-input-wrapper">
+            <input
+              type="email"
+              name="email"
+              placeholder="Enter your email address"
+              required
+              id="tt-emailInput"
+            />
+            <i class="fas fa-envelope tt-input-icon"></i>
+          </div>
+          <button
+            type="submit"
+            id="tt-submitBtn"
+            class="tt-newsletter-btn tt-newsletter-btn"
+          >
+            <span class="tt-btn-text">Subscribe</span>
+          </button>
+        </form>
+      </div>
+    </section>
     <footer class="tt-footer-area">
       <div class="tt-footer-container">
         <div class="tt-footer-content">
