fix the order text

--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
               <i class="fa-solid fa-boxes-stacked"></i>
               <div class="tt-stat-info">
                 <span class="tt-stat-number">135K+</span>
-                <span class="tt-stat-label">Orders Completed</span>
+                <span class="tt-stat-label">Orders delivered</span>
               </div>
             </div>
           </div>
